# ME331ChessBot

./: README.md  README_cn.md
models/chess/Skak/: Assem1.IGS  Assem1.SLDASM  Benteng.SLDPRT  Jaran-WIP.SLDPRT  Kiwo.SLDPRT  Mburi.SLDPRT  Papan.SLDPRT  Patih.SLDPRT  Pion.SLDPRT  Ster.SLDPRT  Tengen.SLDPRT  raja.SLDPRT
models/robot_arm/: Gear1.SLDPRT  Gripper.SLDPRT  RobotArm.SLDASM  ServoMotorMicro_gripper.SLDPRT  arm1.SLDPRT  arm2.SLDPRT  base.SLDPRT  gripper.SLDASM  servo Motor Micro - 副本.SLDPRT  servo Motor Micro.SLDPRT  servo Mptor MG996R.SLDPRT  servoMotorMG996R.SLDPRT  servoMotorMicro.SLDPRT  wist.SLDPRT  装配体1.SLDASM  装配体4.SLDASM
models/robot_arm2023/: Gear1.SLDPRT  Gripper Link.SLDPRT  Gripper.SLDPRT  Gripper_base.SLDPRT  RobotArm.SLDASM  ServoMotorMicro_gripper.SLDPRT  arm1.SLDPRT  arm2.SLDPRT  arm3.SLDPRT  base.SLDPRT  gripper.SLDASM  servoMotorMG996R.SLDPRT  servoMotorMicro.SLDPRT  wist.SLDPRT
models/robot_arm2025/: Gear1.SLDPRT  Gripper Link.SLDPRT  Gripper_base.SLDPRT  RobotArm.SLDASM  ServoMotorMicro_gripper.SLDPRT  arm3.SLDPRT  base.SLDPRT  gripper.SLDASM  servoMotorMG996R.SLDPRT  servoMotorMicro.SLDPRT
ros_noetic_ur5/src/board_new/: CMakeLists.txt  package.xml
ros_noetic_ur5/src/board_new/config/: joint_names_board_new.yaml
ros_noetic_ur5/src/board_new/launch/: board_only.launch
ros_noetic_ur5/src/board_new/meshes/: benteng2.STL  benteng4.STL  jaran2.STL  patih1.STL  patih2.STL  patih3.STL  patih4.STL  pion10.STL  pion11.STL  pion13.STL  pion14.STL  pion3.STL  pion5.STL  pion6.STL  pion7.STL  raja1.STL
ros_noetic_ur5/src/board_new/src/: pieces_manager.cpp  simple_manager.py  spawn_chess_pieces.cpp
ros_noetic_ur5/src/board_new/urdf/: benteng_black.urdf  benteng_white.urdf  board_new.csv  jaran_black.urdf  jaran_white.urdf  patih_black.urdf  patih_white.urdf  pion_black.urdf  pion_white.urdf  raja_black.urdf  raja_white.urdf  ster_black.urdf  ster_white.urdf
ros_noetic_ur5/src/motion_planner/: CMakeLists.txt  package.xml
ros_noetic_ur5/src/motion_planner/src/: custom_position_node.cpp  motion_planner_node.cpp  move_given_pieces.cpp
ros_noetic_ur5/src/ui/: chess_gui.py  chess_with_ai_no_ros.py
ros_noetic_ur5/src/ur5_robot-master/ur5_description/urdf/: gazebo_ur5.xacro
ros_noetic_ur5/src/ur5_robot-master/ur5_moveit_config/: .setup_assistant  package.xml
ros_noetic_ur5/src/ur5_robot-master/ur5_moveit_config/config/: debug.rviz  fake_controllers.yaml  gazebo_ur5.xacro  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml  ur5.srdf
ros_noetic_ur5/src/ur5_robot-master/ur5_moveit_config/launch/: demo_gazebo.launch  display_with_gripper.launch  gazebo.launch  planning_context.launch  ros_controllers.launch
src/board_new/: CMakeLists.txt  package.xml
src/board_new/launch/: board_only.launch  display.launch.py  gazebo.launch  gazebo.launch.py
src/board_new/meshes/: base_link.STL  jaran1.STL  jaran3.STL  jaran4.STL  pion1.STL  pion12.STL  pion15.STL  pion16.STL  pion2.STL  pion4.STL  pion8.STL  pion9.STL  raja2.STL  ster2.STL
src/board_new/src/: pieces_manager.cpp  spawn_chess_pieces.cpp
src/board_new/urdf/: board_new.urdf  chessboard.urdf  jaran_white.urdf  patih_white.urdf  pion_black.urdf  pion_white.urdf  ster_white.urdf
src/my_robot_control/: CMakeLists.txt  package.xml
src/my_robot_control/launch/: run_robot.launch.py
src/my_robot_control/src/: run_robot.cpp
src/my_robot_moveit_config/: package.xml
src/my_robot_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  my_urdf.ros2_control.xacro  my_urdf.srdf  my_urdf.urdf.xacro  ros2_controllers.yaml
src/my_robot_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/my_urdf/: CMakeLists.txt  package.xml
src/my_urdf/config/: joint_names_my_urdf.yaml
src/my_urdf/launch/: display.launch  display.launch.py  empty.world  gazebo.launch.py
src/my_urdf/meshes/: base_link.STL
src/my_urdf/urdf/: urdf.urdf
src/robot_arm - 副本/meshes/: link3.STL  link6_left.STL  link8_left.STL
src/robot_arm - 副本/urdf/: robot_arm.csv
src/robot_arm/config/: joint_names_robot_arm.yaml
src/robot_arm/launch/: arm_only.launch  display.launch  gazebo.launch  main_simulation.launch
src/robot_arm/meshes/: base_link.STL  link1.STL  link10_right.STL  link11_right.STL  link2.STL  link4.STL  link5.STL  link7_left.STL  link9_right.STL
src/robot_arm/urdf/: robot_arm.csv  robot_arm.urdf  robot_arm.xacro  robot_arm_text.urdf
src/robot_arm_control/: CMakeLists.txt  package.xml
src/robot_arm_control/config/: robot_arm_control.yaml
src/robot_arm_control/launch/: robot_arm_control.launch
src/robot_arm_control/src/: fsm_node.cpp  mimic_relay.cpp  motion_planner.cpp  pick_piece.cpp
src/robot_arm_control/srv/: GetJointTrajectory.srv
