<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>board_new</name>
  <version>0.0.1</version>
  <description>The board robot description package</description>
  
  <maintainer email="user@todo.todo">User</maintainer>
  <license>TODO: License declaration</license>

  <!-- 将 ament_cmake 改为 catkin -->
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <!-- rviz2 改为 rviz -->
  <exec_depend>rviz</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <!-- 移除 ros2topic -->

  <!-- 对于 catkin 包，通常不需要 export build_type -->
  <export>
  </export>
</package>
