<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <!-- 包基本信息（必填，可修改为你的信息） -->
  <name>my_urdf</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for robot model</p>
    <p>This package contains configuration data, 3D models and launch files for URDF robot visualization.</p>
  </description>
  <author email="your@email.com">Your Name</author>  <!-- 替换为你的姓名+邮箱 -->
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>BSD</license>

  <!-- 1. 编译工具依赖（ROS 2 必须，替换 ROS 1 的 catkin） -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 2. 核心依赖（用 <depend> 统一声明，自动覆盖 build/exec 阶段，避免重复） -->
  <!-- URDF 解析与可视化核心依赖 -->
  <depend>urdf</depend>                  <!-- URDF 文件解析 -->
  <depend>launch_ros</depend>            <!-- ROS 2 launch 功能（之前解决的核心依赖） -->
  <depend>robot_state_publisher</depend> <!-- 机器人状态发布（URDF 可视化必须） -->
  <depend>joint_state_publisher</depend> <!-- 关节状态发布 -->
  <depend>joint_state_publisher_gui</depend> <!-- 关节控制 GUI（可选，可视化时方便） -->
  <depend>rviz2</depend>                 <!-- ROS 2 可视化工具（替换 ROS 1 的 rviz） -->

  <!-- 可选依赖（按需保留，不需要则删除） -->
  <depend>gazebo_ros</depend>            <!-- Gazebo 仿真（不用则删除） -->
  <depend>tf2_ros</depend>               <!-- 坐标变换（不用则删除） -->
  <depend>std_msgs</depend>              <!-- 标准消息（不用则删除） -->

  <!-- 3. 测试依赖（默认保留，不影响编译） -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- 4. 导出配置（ROS 2 必须） -->
  <export>
    <build_type>ament_cmake</build_type>
    <architecture_independent />
  </export>
</package>






<!-- <package format="2">
  <name>my_urdf</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for urdf</p>
    <p>This package contains configuration data, 3D models and launch files
for urdf robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package> -->



<!-- <?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="wyt@todo.todo">wyt</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> -->


